_sass/_custom.scss
@import "mixins";

@import "landing"; // Special layout for landing page
@import "home";
@import "archive";
@import "toc";

blockquote {
	font-style: normal;
	font-family: $serif;
}

.card {
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	margin: 0.2rem 0.2rem 0.4rem;
}

html {
	box-sizing: border-box;
	font-size: 14px;
	@include breakpoint($medium) { font-size: 16px; }
	@include breakpoint($large) { font-size: 18px; }
	@include breakpoint($x-large) { font-size: 20px; }
}

#site-nav {
	a.site-logo, a.site-title {
		@include noselect;
	}
}

#main {
	@include breakpoint($x-large) { max-width: 1440px; }
}

div.page__hero--overlay {
	text-align: center;
	margin-bottom: 1em;

	h1.page__title {
		// @include noselect;
	}

	a.btn {
		backdrop-filter: blur(1.5px);
	}

	p.page__lead {
		margin-left: auto;
		margin-right: auto;
	}
}

a.site-logo > img, div.author__avatar:hover > img {
	animation: spin-periodically 5000ms infinite ease-in-out;
}

section.page__content {
	a {
		word-break: break-word;
	}

	h1 {
		margin-top: 0;
		font-size: 1.67em;
	}

	h2 {
		font-size: 1.33em;
	}

	h3 {
		font-size: 1.17em;
	}

	h4 {
		font-size: 1.083em;
	}

	h5 {
		font-size: 1.042em;
	}

	h6 {
		font-size: 1em;
	}

	h2, h3, h4, h5, h6 {
		margin-top: 1.5em;

		&:nth-child(2) {
			margin-top: 0;
		}
	}

	.toc .nav__title {
		margin-top: 0;
		padding: 0.5rem;
		font-size: 0.8em;
	}

	table {
		display: table;
		width: auto;
		margin-left: auto;
		margin-right: auto;
	}

	li p {
		margin-bottom: 0;
	}

	a:not(.btn):not(#goog-wm-sb):hover img.card {
		box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 0.3), 0 6px 30px 0 rgba(0, 0, 0, 0.19);
	}

	p img.block {
		display: block;
		margin-left: auto;
		margin-right: auto;
	}

	.notice,
	.notice--primary,
	.notice--info,
	.notice--warning,
	.notice--success,
	.notice--danger {
		font-size: 0.91em !important;

		> h1, > h2, > h3, > h4, > h5, > h6 {
			&:first-child {
				margin-top: 0;
			}
		}
	}
}

/********** Animations **********/

@import "loading-animation";

@keyframes spin-periodically {
    80% { transform: rotate(0deg); }
    to { transform: rotate(360deg); }
}

